# CHIP8EMU

./: .gitignore  CMakeLists.txt  readme.md
include/: CPU.h  Display.h  Keypad.h  Memory.h  Platform.h  prueba.h
src/: CPU.cpp  Display.cpp  Keypad.cpp  Memory.cpp  Platform.cpp  main.cpp  prueba.cpp
